--- a/marker_based/index.html
+++ b/marker_based/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>Augmented_Reality</title>
+    <script src="webpack.config.js"></script>
+    <style>
+        body {margin: 0; height: 100%; background: #ded7e0;}
+    </style>
+</head>
+
     <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
     <!-- we import arjs version without NFT but with marker + location based support -->
     <!--<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>-->
-    <script src="build/aframe-ar.js"></script>
+
     
     <!-- particles system component -->
     <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>
+    <script src="webpack.config.js" id="snow"></script>
     
     <!-- speech command component -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.5.0/annyang.min.js"></script>
@@ -20,10 +30,26 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
+    arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
+
+    <a-entity id="annyang" annyang-speech-recognition></a-entity>
+
+        <!-- speech command component 2 -->
+        <a-entity id="switch" 
+        speech-command__start="command: start; type: attribute; attribute: visible; targetElement: snow; value: true;"
+        speech-command__stop="command: stop; type: attribute; attribute: visible; value: false;">
+        </a-entity>
+
         <a-marker preset="hiro">
             <a-entity id="box" geometry="primitive: box; width: 0.2; depth: 0.2; height: 0.2" position="0 0 0" material="color: #4CC3D9"></a-entity>
+            <a-entity id="box" geometry="primitive: box; width: 0.2; depth: 0.2; 
+            height: 0.2" position="3 3 0" material="color: #4CC3D9"></a-entity>
+
+            <a-entity id="cylinder" geometry="primitive: cylinder; width: 0.2; depth: 0.2; 
+            height: 0.2" position="0 0 0" material="color: #FF00FF"></a-entity>
+
+            <a-entity id="sphere" geometry="primitive: sphere; width: 0.2; depth: 0.2; 
+            height: 0.2" position="-3 -3 0" material="color: #808000"></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
         </a-scene>
-    </body>
-</html>
