--- a/marker_based/index.html
+++ b/marker_based/index.html
@@ -8,11 +8,11 @@
         body {margin: 0; height: 100%; background: #ded7e0;}
     </style>
 </head>
-
+arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: true;">
     <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
     <!-- we import arjs version without NFT but with marker + location based support -->
     <!--<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>-->
-@ -7,21 +16,36 @@
+
     
     <!-- particles system component -->
     <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>
