--- a/marker_based/index.html
+++ b/marker_based/index.html
@@ -53,7 +53,7 @@
             height: 0.2" position="-3 -3 0" material="color: #808000"></a-entity>
         </a-marker>
 
-        <a-marker type='pattern' url='marker_based\assets\pattern-dpsd.patt'>
+        <a-marker preset='custom' type='pattern' url='marker_based\assets\pattern-dpsd.patt'>
             <a-entity id="box" geometry="primitive: box; width: 0.2; depth: 0.2; 
             height: 0.2" position="3 3 0" material="color: #4CC3D9"></a-entity>
 
